objects/ssot__RecruitmentPosting__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Posting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostingTitleText__c</fullName>
        <label>Posting Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostCndSrcType__c</fullName>
        <label>Candidate Source Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostType__c</fullName>
        <label>Posting Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionId__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371628663_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentPosting_RecruitmentRequis_rel</label>
        <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
        <relationshipLabel>RecruitmentPosting_RecruitmentRequis_rel</relationshipLabel>
        <relationshipName>rel_1721371628663_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>